# recorder-python

./: .env  .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml  requirements.txt  run.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-priority-queue-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-local-llm-client/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-rag-document-search/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-screenshot-mode/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: download_models.py  download_qwen_asr.py  setup.py
src/: __init__.py  main.py
src/ai/: __init__.py  local_llm.py  openrouter.py  priority_queue.py
src/audio/: capture.py
src/database/: manager.py
src/gui/: __init__.py  main_window.py  settings_dialog.py
src/rag/: __init__.py  chunker.py  embedding.py  manager.py  search.py
src/screenshot/: __init__.py  analyzer.py  capture.py  storage.py
src/speech/: __init__.py  asr.py  diarization.py  faster_whisper_backend.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_asr_speedups.py  test_backends.py  test_config_refactor.py  test_priority_queue_fallback.py  test_question_detector.py  test_rag.py
