[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recorder-python"
version = "2.0.0"
description = "Audio Recorder STT - Python native application with Qwen3 ASR"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Audio Recorder Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "PySide6>=6.6.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pulsectl>=23.5.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "resemblyzer>=0.1.1",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "SQLAlchemy>=2.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "appdirs>=1.4.4",
]

[project.scripts]
recorder-python = "src.main:main"

[project.urls]
Homepage = "https://github.com/audio-recorder-stt/recorder-python"
Repository = "https://github.com/audio-recorder-stt/recorder-python"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
